<resources>
    <string name="app_name">Anim Scale Toggle</string>
    <string name="tile_label">Animations</string>
    <string name="shortcut_off_short">Anim Off</string>
    <string name="shortcut_off_long">Disable animations</string>
    <string name="shortcut_on_short">Anim On</string>
    <string name="shortcut_on_long">Enable animations</string>
    <string name="shortcut_toggle_short">Toggle Anim</string>
    <string name="shortcut_toggle_long">Toggle animations</string>
</resources>
